# BmstuSchedule

./: .editorconfig  README.md  angular.json  netlify.toml  package-lock.json  package.json
.github/workflows/: api.yml  dev_api.yml
api/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/app/: settings.py
api/app/api/: app.py
api/app/api/routers/: admin.py  groups.py  rooms.py  teachers.py
api/app/api/schemas/: __init__.py  admin.py  base.py  group.py  response.py  room.py  schedule_pair.py  teacher.py
api/app/clients/lks/: __init__.py  client.py  models.py
api/app/core/schedule_manager/: __init__.py  exceptions.py  helpers.py  manager.py
api/app/db/: database.py
api/app/db/migrations/: env.py
api/app/db/migrations/versions/: 4b5f663e968e_unique_fields.py  5f22c30d4d26_rm_discipline_lks_id.py  6fcf06da51ff_new.py  a89d1ccb712b_initial.py
api/app/domain/: __init__.py  day_of_week.py  errors.py  schedule.py  sync_status.py  timeslot.py  week.py
api/app/helpers/: __init__.py  generate_concrete_pairs.py
api/app/models/: __init__.py  audience.py  base.py  course.py  department.py  discipline.py  faculty.py  filial.py  group.py  many_to_many.py  schedule_pair.py  structure_node.py  sync.py  synchronization.py  teacher.py  university.py
api/app/repos/: audience_repo.py  base_repo.py  course_repo.py  department_repo.py  discipline_repo.py  faculty_repo.py  filial_repo.py  group_repo.py  schedule_pair_repo.py  sync_repo.py  teacher_repo.py  university_repo.py
api/app/services/: group_svc.py  room_svc.py  schedule_mixin.py  sync_svc.py  teacher_svc.py
api/app/utils/: lks_synchronizer.py
api/envs/: common.env  local.env  production.env
api/tests/: conftest.py
api/tests/app/clients/: test_lks_client.py
api/tests/app/core/schedule_manager/: conftest.py  test_schedule_manager.py
api/tests/app/repos/: test_group_repo.py
api/tests/app/services/: test_group_svc.py
export_students/: main.py  student.py
src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/core/: schedule.service.ts
src/app/core/models/: pair.ts  pairs-response.ts
src/app/pages/home-page/: home-page.component.html  home-page.component.scss  home-page.component.ts
src/app/pages/pairs-page/: pairs-page.component.html  pairs-page.component.ts
src/app/shared/pair-item/: pair-item.component.html  pair-item.component.scss  pair-item.component.ts
src/app/shared/teacher-item/: teacher-item.component.html  teacher-item.component.ts
ui/: README.md  package.json  proxy.conf.json
ui/src/: index.html
ui/src/app/: app.component.ts
ui/src/app/core/: schedule.service.ts
ui/src/app/core/models/: teacher.ts
ui/src/app/pages/home-page/: home-page.component.scss  home-page.component.ts
ui/src/app/pages/pairs-page/: pairs-page.component.html  pairs-page.component.scss  pairs-page.component.ts
ui/src/app/shared/teacher-item/: teacher-item.component.scss
